--- a/app/globals.css
+++ b/app/globals.css
@@ -52,6 +52,10 @@ h3 {
   line-height: 1.4;
 }
 
+.footer-store-name {
+  color: #ffffff !important;
+}
+
 p {
   font-size: 0.875rem; /* 14px */
   color: var(--neutral-dark-gray);
